# pyghidra-decaf

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  tasks.py
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: gap-analysis-ghidra-pyghidra-decaf.md  index.md
pyghidra_decaf/: .gitlab-ci.yml  README.md  pyproject.toml
pyghidra_decaf/src/pyghidra_decaf/: __init__.py  bootstrap.py  decaf_setup.py  launch.py  util.py
pyghidra_decaf/src/pyghidra_decaf/decaf/: _diagnostics.py  _jpype_utils.py  docking.py  plugin.py  pyghidra_decaf.py
pyghidra_decaf/src/pyghidra_decaf/java/: DecafPlugin.java  DecafProgramPlugin.java  PyGhidraDecafPlugin.java
pyghidra_decaf/src/pyghidra_decaf/stubs/: docking.pyi  jplugin.pyi
pyghidra_decaf/src/pyghidra_decaf/tamer/: program.py
tests/: conftest.py  test_bootstrap.py  test_bootstrap_paths.py  test_decaf_setup.py  test_diagnostics.py  test_launch.py  test_util.py
tests/e2e/: test_plugin_lifecycle.py
tests/fixtures/decaf_test_consumer/: pyproject.toml
tests/fixtures/decaf_test_consumer/src/decaf_test_consumer/: __init__.py  entrypoints.py  plugin.py
tests/integration/: test_decaf_load_integration.py  test_decaf_setup_integration.py
