[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyghidra-decaf"
dynamic = ["version"]
description = "Enables plugins for Ghidra implemented in python."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Eric Lin", email = "17968842+anselor@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "setuptools",
    "pydantic",
    "pyghidra",
]

[project.scripts]
pyghidra_decaf_bootstrap = "pyghidra_decaf.bootstrap:main"

[project.entry-points."pyghidra.setup"]
decaf_setup = "pyghidra_decaf.decaf_setup:decaf_setup"

[project.entry-points."pyghidra.pre_launch"]
decaf_load = "pyghidra_decaf.decaf.pyghidra_decaf:decaf_load"


[project.optional-dependencies]
pyhidra = ["pyhidra"]
dev = [
    "ghidra-stubs",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.0.270",
]

[project.urls]
"Homepage" = "https://github.com/nightwing-us/pyghidra-decaf"
"Repository" = "https://github.com/nightwing-us/pyghidra-decaf"
"Bug Tracker" = "https://github.com/nightwing-us/pyghidra-decaf/issues"

[tool.hatch.version.raw-options]
root = ".."

[tool.hatch.version]
source = "vcs"
tag-pattern = "^(?P<version>[vV]?\\d+(?:\\.\\d+){0,3}[^\\+]*)(?:\\+.*)?$"
path = "src/pyghidra_decaf/_version.py"

[tool.hatch.build.hooks.vcs]
version-file = "src/pyghidra_decaf/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pyghidra_decaf"]

[tool.isort]
profile = "pycharm"
indent = 4
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 2
import_heading_stdlib = "Standard Libraries"
import_heading_thirdparty = "Third Party Libraries"
import_heading_firstparty = "Our Libraries"
known_firstparty = "pyghidra_decaf"
force_sort_within_sections = true
force_alphabetical_sort_within_sections = true
use_parentheses = true
src_paths = ["src"]
skip = '.venv,venv,env,.nox,_version.py,build'

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
mypy_path = "src"
packages = ["pyghidra_decaf"]
explicit_package_bases = true
namespace_packages = true
plugins = ["pydantic.mypy"]

[tool.ruff]
src = ["src"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 60
quote-style = "single"
indent-style = "space"
line-ending = "lf"
preview = true

[tool.ruff.lint.flake8-type-checking]
quote-annotations = true

[tool.ruff.lint.pycodestyle]
max-line-length = 120
max-doc-length = 80


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"